--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -110,6 +110,17 @@
                             app:layout_constraintBottom_toBottomOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <TextView
+                        android:id="@+id/empty_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/light_gray"
+                        android:textAppearance="@style/error_message"
+                        android:textAlignment="center"
+                        android:text="@string/empty_text"
+                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        android:layout_marginTop="40dp"
+                        android:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView"
