--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -32,7 +32,7 @@
             android:textAlignment="center"
             android:autoSizeTextType="uniform"
             android:textColor="@color/dark_gray"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             app:layout_constraintTop_toBottomOf="@id/avatar"
