--- a/app/src/main/res/layout/update_user_dialog.xml
+++ b/app/src/main/res/layout/update_user_dialog.xml
@@ -117,12 +117,25 @@
             app:drawableLeftCompat="@drawable/reload_button_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/password_field"
+            app:layout_constraintTop_toBottomOf="@id/error_text"
             android:layout_marginTop="28dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
             android:paddingHorizontal="30dp"
             android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck" />
+
+    <TextView
+            android:id="@+id/error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/error_message"
+            android:text="@string/error_update_message"
+            android:visibility="gone"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/password_field"
+            app:layout_constraintStart_toStartOf="@+id/password_field"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
