--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -112,7 +112,7 @@
 
                 <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="85dp"
                         android:layout_centerHorizontal="true"
                         android:layout_alignParentTop="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +126,6 @@
                         android:showDividers="middle"
                         android:gravity="center_horizontal"
                         android:baselineAligned="false"
-                        android:paddingBottom="10dp"
                         android:layout_marginStart="18dp"
                         android:layout_marginEnd="18dp">
 
