--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -22,7 +22,7 @@
                 android:paddingBottom="25dp">
 
             <TextView
-                    android:id="@+id/delete_desc"
+                    android:id="@+id/name_desc"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/create_team_desc"
@@ -111,7 +111,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/delete_desc"
+                    app:layout_constraintTop_toBottomOf="@+id/name_desc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="15dp"
