--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -1,13 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.fragments.ProjectsFragment">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Projects" />
+    <ImageView
+            android:contentDescription="@string/yuta_logo"
+            android:layout_height="51dp"
+            android:layout_width="135dp"
+            android:src="@drawable/logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/scrollView"
+            android:layout_marginTop="32dp"
+            android:id="@+id/card_background" />
 
-</FrameLayout>
+    <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scrollbars="none"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <Button
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/log_out"
+                    android:contentDescription="@string/exit_button"
+                    android:background="@drawable/exit_icon"
+                    style="@style/classic_button_style"
+                    tools:ignore="TouchTargetSizeCheck"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="20dp"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/scroll_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/scrollview_background"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="115dp">
+
+                <Button
+                        android:id="@+id/create_project"
+                        android:background="@drawable/blue_button_background"
+                        style="@style/blue_button"
+                        android:textAppearance="@style/active_toggle"
+                        android:text="@string/create_project"
+                        android:textAlignment="center"
+                        app:layout_constraintStart_toStartOf="@+id/toggleGroup"
+                        android:paddingHorizontal="21dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
+                        android:autoSizeTextType="uniform"
+                        android:drawableLeft="@drawable/create_icon"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="25dp"
+                        android:drawablePadding="10dp" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/toggleGroup"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/switch_background"
+                        android:orientation="horizontal"
+                        app:checkedButton="@id/manager_button"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/create_project"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        app:layout_constraintWidth_max="wrap">
+
+                    <ToggleButton
+                            android:id="@+id/manager_button"
+                            android:textAppearance="@style/active_toggle"
+                            android:hapticFeedbackEnabled="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textOn="@string/manager_button"
+                            android:textOff="@string/manager_button"
+                            android:background="@drawable/switch_button"
+                            android:stateListAnimator="@null"
+                            tools:ignore="TouchTargetSizeCheck"
+                            android:paddingHorizontal="30dp"
+                            app:layout_constraintEnd_toStartOf="@+id/member_button"
+                            android:layout_marginEnd="-10dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                    <ToggleButton
+                            android:id="@+id/member_button"
+                            android:textAppearance="@style/default_toggle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:hapticFeedbackEnabled="false"
+                            android:textOn="@string/member_button"
+                            android:textOff="@string/member_button"
+                            android:background="@drawable/switch_button"
+                            android:stateListAnimator="@null"
+                            tools:ignore="TouchTargetSizeCheck"
+                            android:paddingHorizontal="40dp"
+                            app:layout_constraintStart_toEndOf="@id/manager_button"
+                            android:layout_marginStart="-20dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                        android:id="@+id/empty_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/light_gray"
+                        android:textAppearance="@style/error_message"
+                        android:textAlignment="center"
+                        android:text="@string/empty_projects_text"
+                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        android:layout_marginTop="40dp"
+                        android:visibility="gone"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:nestedScrollingEnabled="false"
+                        android:paddingBottom="30dp"
+                        android:layout_marginTop="10dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:background="@drawable/scrollview_background"
+            android:animateLayoutChanges="true"
+            android:visibility="gone"
+            android:id="@+id/progressLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="115dp">
+
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@color/blue"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginBottom="200dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
