--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -60,7 +60,7 @@
                         android:id="@+id/create_team"
                         android:background="@drawable/blue_button_background"
                         style="@style/blue_button"
-                        android:textAppearance="@style/active_teams"
+                        android:textAppearance="@style/active_toggle"
                         android:text="@string/create_team"
                         android:textAlignment="center"
                         app:layout_constraintStart_toStartOf="@+id/toggleGroup"
@@ -69,7 +69,7 @@
                         android:layout_height="wrap_content"
                         tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
                         android:autoSizeTextType="uniform"
-                        android:drawableLeft="@drawable/create_team_icon"
+                        android:drawableLeft="@drawable/create_icon"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="25dp"
                         android:drawablePadding="10dp" />
@@ -91,7 +91,7 @@
 
                     <ToggleButton
                             android:id="@+id/manager_button"
-                            android:textAppearance="@style/active_teams"
+                            android:textAppearance="@style/active_toggle"
                             android:hapticFeedbackEnabled="false"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
 
                     <ToggleButton
                             android:id="@+id/member_button"
-                            android:textAppearance="@style/default_teams"
+                            android:textAppearance="@style/default_toggle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:hapticFeedbackEnabled="false"
@@ -133,7 +133,7 @@
                         android:textColor="@color/light_gray"
                         android:textAppearance="@style/error_message"
                         android:textAlignment="center"
-                        android:text="@string/empty_text"
+                        android:text="@string/empty_teams_text"
                         app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
                         android:layout_marginTop="40dp"
                         android:visibility="gone"
