--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,11 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="rectangle_image_view">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10dp</item>
+    </style>
+
     <style name="classic_button_style" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@null</item>
     </style>
@@ -147,7 +152,7 @@
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="active_teams" parent="Widget.AppCompat.Button.Borderless">
+    <style name="active_toggle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:fontFamily">@font/montserrat_semibold</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
@@ -158,6 +163,19 @@
         <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="project_member">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">7sp</item>
+        <item name="android:letterSpacing">0.02</item>
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="more_member_text">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/blue</item>
     </style>
 
     <style name="team_name">
@@ -174,7 +192,7 @@
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
-    <style name="default_teams" parent="active_teams">
+    <style name="default_toggle" parent="active_toggle">
         <item name="android:textColor">@color/blue</item>
     </style>
 
@@ -198,6 +216,13 @@
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
+    <style name="project_name">
+        <item name="android:fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="orange_button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="backgroundTint">@color/orange_button</item>
         <item name="android:layout_width">wrap_content</item>
@@ -213,5 +238,13 @@
         <item name="android:minWidth">120dip</item>
         <item name="android:minHeight">45dip</item>
         <item name="layout_constrainedWidth">true</item>
+    </style>
+
+    <style name="tech_task_button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
