--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -30,6 +31,19 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 android:id="@+id/view" />
+
+        <Button
+                android:layout_width="32dp"
+                android:layout_height="18dp"
+                android:id="@+id/project_menu"
+                android:contentDescription="@string/project_menu"
+                android:background="@drawable/ic_project_menu"
+                style="@style/classic_button_style"
+                tools:ignore="TouchTargetSizeCheck"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="16dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/project_header"
@@ -211,7 +225,8 @@
                 app:layout_constraintEnd_toEndOf="@id/team_text"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="15dp" />
+                android:layout_marginBottom="15dp"
+                android:orientation="vertical" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
