--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -32,19 +32,6 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 android:id="@+id/view" />
 
-        <Button
-                android:layout_width="32dp"
-                android:layout_height="18dp"
-                android:id="@+id/project_menu"
-                android:contentDescription="@string/project_menu"
-                android:background="@drawable/ic_project_menu"
-                style="@style/classic_button_style"
-                tools:ignore="TouchTargetSizeCheck"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="13dp"
-                android:layout_marginEnd="16dp" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/project_header"
                 android:layout_width="0dp"
@@ -52,7 +39,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="3dp"
                 android:layout_marginEnd="15dp"
                 app:layout_constrainedWidth="true"
                 android:layout_marginTop="15dp">
@@ -71,7 +58,10 @@
                     android:padding="1dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginVertical="12dp"
+                    android:elevation="10dp" />
 
             <TextView
                     android:id="@+id/project_name"
@@ -88,6 +78,19 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
+                android:layout_width="32dp"
+                android:layout_height="18dp"
+                android:id="@+id/project_menu"
+                android:contentDescription="@string/project_menu"
+                android:background="@drawable/ic_project_menu"
+                style="@style/classic_button_style"
+                tools:ignore="TouchTargetSizeCheck"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="16dp" />
+
+        <Button
                 android:id="@+id/tech_task_button"
                 android:background="@drawable/button_blue"
                 style="@style/blue_button"
@@ -95,13 +98,11 @@
                 android:text="@string/tech_task_button"
                 android:paddingHorizontal="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="30dp"
                 tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
                 android:autoSizeTextType="none"
                 android:drawableLeft="@drawable/ic_tech_task"
-                android:layout_marginTop="10dp"
                 android:drawablePadding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/project_header"
                 app:layout_constraintBottom_toBottomOf="@id/view"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintEnd_toEndOf="@id/project_header"
@@ -223,10 +224,51 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="@id/team_text"
                 app:layout_constraintEnd_toEndOf="@id/team_text"
-                android:nestedScrollingEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="15dp"
-                android:orientation="vertical" />
+                android:orientation="horizontal" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/team_container"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/background_project"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/swipe_line"
+                    android:layout_width="120dp"
+                    android:layout_height="5dp"
+                    app:layout_constrainedWidth="true"
+                    android:background="@drawable/swipe_line"
+                    android:elevation="2dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/team_list"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constrainedHeight="true"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/swipe_line"
+                    android:layout_marginTop="10dp"
+                    android:padding="8dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
