--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -238,21 +238,20 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:visibility="gone">
+                android:visibility="visible">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/swipe_line"
-                    android:layout_width="120dp"
-                    android:layout_height="5dp"
-                    app:layout_constrainedWidth="true"
-                    android:background="@drawable/swipe_line"
-                    android:elevation="2dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
+            <Button
+                    android:id="@+id/close"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:contentDescription="@string/close_button"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    android:layout_marginTop="13dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="14dp"
+                    android:background="@drawable/ic_close"
+                    style="@style/orange_button_style"
+                    tools:ignore="TouchTargetSizeCheck" />
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/team_list"
@@ -263,8 +262,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/swipe_line"
-                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/close"
+                    android:layout_marginTop="3dp"
                     android:padding="8dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
