--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,18 @@
 <resources>
-
     <style name="Theme.YUTA" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/blue</item>
         <item name="colorOnSecondary">@color/white</item>
-        <item name="android:navigationBarColor">?attr/colorSecondary</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="Theme.YUTA.Login" parent="Theme.YUTA">
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:navigationBarColor">?colorSecondary</item>
     </style>
 </resources>
